--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@
 
 buildscript {
     ext.kotlin_version = '1.3.72'
+    ext.kotlin_coroutines_version = '1.3.8'
     repositories {
         mavenCentral()
         google()
         jcenter()
         maven {
-           url 'https://maven.fabric.io/public'
+            url 'https://maven.fabric.io/public'
         }
 
     }
