--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,11 +51,11 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'com.google.android:flexbox:2.0.1'
 
     implementation 'com.google.android.exoplayer:exoplayer:2.9.0'
-    implementation 'com.google.firebase:firebase-analytics:17.4.4'
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
