--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
 
@@ -55,12 +56,16 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.android:flexbox:2.0.1'
 
-    implementation 'com.google.android.exoplayer:exoplayer:2.9.0'
+    //implementation 'com.google.android.exoplayer:exoplayer:2.9.0'
 
+    implementation 'com.google.firebase:firebase-storage-ktx:19.1.1'
+    implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation 'com.ablanco.zoomy:zoomy:1.1.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
